# dune-geometric-pde

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  config.h.cmake  dune-geometric-pde.pc.in  dune.module
cmake/modules/: CMakeLists.txt  DuneGeometricPdeMacros.cmake
src/: CMakeLists.txt  assembleinterfacerhs.hh  computeinterface.hh  dune-geometric-pde.cc  femschemeinterface.hh  gnuplotwriter.hh  interfaceoperator.hh  interfacerhs.hh  interfacestatistics.hh  normal.hh  parameter  vertexfunction.hh
